<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Big Indian</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">Top Stories</string>
    <string name="title_activity_item">Comments</string>
    <string name="filter_title_item">Big Indian</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="drawer_title">the Big Indian news</string>
    <string name="view_in_browser">View in external browser</string>
    <string name="favorite_email_subject">Your saved stories</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="report_dialog_title">Choose a reason</string>
    <string name="open">Open Story</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_about">About</string>
    <string name="license_title">License</string>
    <string name="third_party_licenses_title">3rd Party Licenses</string>
    <string name="developer_info_title">Developer Info</string>
    <string name="application_info_title">About</string>
    <string name="application_info_text">
        <![CDATA[
            <p>Version: %1$s</p>
            <p>
                <b>The Big Indian News</b> is a crowd-sourced link aggregator made specially for startups in India.
                It brings you the most relevant and lastest news from many different sources.
                <br/><br/>
                Articles come from people who post it on the app or on the site. Articles are moderated so that only
                relevant articles are published.
                <br/><br/>
                The app was created by <b>Steven Enamakel</b> just for fun, and was released on
                Feburary 2016. It is free, open-source and will never run ads.
            </p>
            <p>This Application is open source at <a href="https://github.com/thebigindiannews/android-app">github.com/thebigindiannews/android-app</a></p>
        ]]>
    </string>
    <string name="libraries_title">Libraries &amp; Resources</string>
    <string name="title_activity_favorite">Saved Stories</string>
    <string name="saved">Saved %1$s</string>
    <string name="toast_saved">Story saved</string>
    <string name="clear_all">Clear all</string>
    <string name="toast_removed">Story unsaved</string>
    <string name="no_saved_stories">No saved stories so far</string>
    <string name="no_comments">It\'s still quiet here</string>
    <string name="confirm_clear">Clear all saved stories?</string>
    <string name="email">Export via email</string>
    <string name="preparing" tools:ignore="TypographyEllipsis">Preparing...</string>
    <string name="clear_selected">Clear selected</string>
    <string name="confirm_clear_selected">Clear selected saved stories?</string>
    <string name="search">Search</string>
    <string name="hint_search_saved_stories">Search saved stories</string>
    <string name="no_stories_search">Couldn\'t find what you\'re looking for</string>
    <string name="pref_external_title">Use external browser</string>
    <string name="pref_external_summary">Read articles in external browser</string>
    <string name="pref_color_code_title">Color code</string>
    <string name="pref_highlight_updated_title">Highlight updated stories</string>
    <string name="pref_highlight_updated_summary">Show changes from last refresh</string>
    <string name="pref_custom_tab_title">Use custom Chrome tab (beta)</string>
    <string name="pref_custom_tab_summary">Open Chrome tab instead of browser</string>
    <string name="pref_story_display_title">Default story display</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_search_sort_title">Sort by</string>
    <string name="pref_search_sort_value_recent">recent</string>
    <string name="pref_search_sort_value_default">default</string>
    <string name="pref_text_size_title">Text size</string>
    <string name="pref_font_title">Font</string>
    <string name="pref_comment_display_title">Thread display</string>
    <string name="pref_max_lines_title">Comment display</string>
    <string name="pref_lazy_load_title">Lazy load content</string>
    <string name="pref_lazy_load_summary">Load content only when you switch to its tab</string>
    <string name="connection_error">Unable to connect to The Big Indian News. Check your connection or try again.</string>
    <string name="select_story">Select a story to view</string>
    <string name="download_external">View in another app</string>
    <string name="try_me">Long press one to save it for later!</string>
    <string name="title_activity_jobs">Jobs</string>
    <string name="title_activity_show">Show HN</string>
    <string name="title_activity_ask">Ask HN</string>
    <string name="title_activity_new">New Stories</string>
    <string name="title_activity_search">Search</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="clear_search_history_confirm">Clear search history?</string>
    <plurals name="hide_comments">
        <item quantity="zero">Hide %1$s comment</item>
        <item quantity="one">Hide %1$s comment</item>
        <item quantity="other">Hide %1$s comments</item>
    </plurals>
    <plurals name="show_comments">
        <item quantity="zero">Show %1$s comment</item>
        <item quantity="one">Show %1$s comment</item>
        <item quantity="other">Show %1$s comments</item>
    </plurals>
    <string name="parent"><![CDATA[<a href="#">parent</a>]]></string>
    <string name="undo">Undo</string>
    <plurals name="score">
        <item quantity="one">%1$s pt</item>
        <item quantity="other">%1$s pts</item>
    </plurals>
    <string name="comments">Comments</string>
    <plurals name="comments_count">
        <item quantity="zero">%1$s Comment</item>
        <item quantity="one">%1$s Comment</item>
        <item quantity="other">%1$s Comments</item>
    </plurals>
    <string name="article">Article</string>
    <string name="reset_settings">Reset all settings</string>
    <string name="reset_settings_confirm">Reset all your preferences to app defaults?</string>
    <string name="last_updated">Last updated %1$s</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="title_hint">Title</string>
    <string name="comment_hint">Comment</string>
    <string name="feedback_note">
        <![CDATA[
            Your feedback will be made public as a <a href="https://github.com/thebigindiannews/android-app/issues">Github issue</a>.
        ]]>
    </string>
    <string name="title_required">Title is required</string>
    <string name="comment_required">Comment is required</string>
    <string name="feedback_sent">Feedback sent. Thank you!</string>
    <string name="feedback_failed">Failed to send, please try again</string>
    <string name="chooser_title">Open with</string>
    <string name="title_activity_popular">What\'s Hot</string>
    <string name="range">Range</string>
    <string name="popular_range_last_24h">Last 24h</string>
    <string name="popular_range_past_week">Past week</string>
    <string name="popular_range_past_month">Past month</string>
    <string name="popular_range_past_year">Past year</string>
    <plurals name="new_stories_count">
        <item quantity="zero">%1$s new story</item>
        <item quantity="one">%1$s new story</item>
        <item quantity="other">%1$s new stories</item>
    </plurals>
    <string name="show_me">Show me</string>
    <plurals name="showing_new_stories">
        <item quantity="zero">Showing %1$s new story</item>
        <item quantity="one">Showing %1$s new story</item>
        <item quantity="other">Showing %1$s new stories</item>
    </plurals>
    <string name="show_all">Show all</string>
    <string name="whats_this">What\'s this?</string>
    <string name="got_it">Got it</string>
    <string name="help_new_story">New story since last refresh</string>
    <string name="help_promoted_story">Promoted story since last refresh</string>
    <string name="help_new_comments">Story with new comments since last refresh</string>
    <string name="help_lazy_load">With lazy loading setting enabled, only your preferred default tab will be loaded when an item is first opened.\n\nIf you are on a slow connection or encounter lagging, turning this on may help.\n\nLazy loading is enabled by default for non-wifi connections, regardless of this setting.</string>
    <string name="readability">Ad-free mode</string>
    <string name="text_size_extra_small">Extra small</string>
    <string name="text_size_small">Small</string>
    <string name="text_size_medium">Medium</string>
    <string name="text_size_large">Large</string>
    <string name="text_size_extra_large">Extra large</string>
    <string name="readability_failed">Unable to parse article</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_sepia">Sepia</string>
    <string name="theme_green">Green</string>
    <string name="theme_solarized_dark">Solarized Dark</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_solarized">Solarized</string>
    <string name="comment_display_multiple">Multiple pages</string>
    <string name="comment_display_single">Single page - auto expand</string>
    <string name="comment_display_collapsed">Single page - collapsed</string>
    <string name="story_display_article">Article</string>
    <string name="story_display_comments">Comments</string>
    <string name="search_sort_recent">More recent</string>
    <string name="search_sort_popularity">Popularity</string>
    <string name="story_display_readability">Ad-free</string>
    <string name="font_options">Font options</string>
    <string name="read_more">Read all %1$s lines</string>
    <string name="comment_max_lines_3">Max 3 lines</string>
    <string name="comment_max_lines_4">Max 4 lines</string>
    <string name="comment_max_lines_5">Max 5 lines</string>
    <string name="comment_max_lines_all">All</string>
    <string name="file_not_supported">Content type not supported</string>
    <string name="card_view">Card view</string>
    <string name="compact_view">Compact view</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Login to The Big Indian News</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="login_failed">Login/create account failed, please try again</string>
    <string name="welcome">Welcome %1$s!</string>
    <string name="logout_confirm">Do you want to log out?</string>
    <string name="choose_account">Choose an account</string>
    <string name="add_account">Add account</string>
    <string name="login_note">Your credentials will be stored securely under your device\'s Settings / Accounts</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="re_enter_password">Re-enter your password</string>
    <string name="original_content">Original content</string>
    <string name="formatting_guidelines">
        <![CDATA[
            <a href="#">Big Indian News formatting guidelines</a>
        ]]>
    </string>
    <string name="submit_content_hint">URL</string>
    <string name="title_activity_submit">Submit an Article</string>
    <string name="submit_note">Enter text to submit a question for discussion, or URL to submit a link. You can also share links directly from other apps</string>
    <string name="title_activity_user">My Profile</string>
    <string name="logout">Logout</string>
</resources>