<!--
  ~ Copyright (c) 2015 Ha Duy Trung
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clickable="true"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context="com.enamakel.thebigindiannews.fragments.DrawerFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:visibility="gone">

        <com.enamakel.thebigindiannews.views.TintableTextView
            android:id="@id/drawer_account"
            style="@style/DrawerTextStyle"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:paddingRight="88dp"
            android:text="@string/login"
            android:textColor="?android:attr/textColorPrimary"/>

        <ImageButton
            android:id="@id/drawer_logout"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/logout"
            android:src="@drawable/ic_power_settings_new_white_24dp"
            android:tint="?android:attr/textColorPrimary"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/logo512"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/drawer_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold"
            />
    </LinearLayout>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_list"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_trending_up_white_24dp"
        android:text="@string/title_activity_list"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_popular"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_whatshot_white_24dp"
        android:text="@string/title_activity_popular"
        android:visibility="gone"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_new"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_new_releases_white_24dp"
        android:text="@string/title_activity_new"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_show"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_done_white_24dp"
        android:text="@string/title_activity_show"
        android:visibility="gone"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_ask"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_live_help_white_24dp"
        android:text="@string/title_activity_ask"
        android:visibility="gone"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_job"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_work_white_24dp"
        android:text="@string/title_activity_jobs"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blackT12"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_user"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:text="@string/title_activity_user"
        android:visibility="gone"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_submit"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_add_white_24dp"
        android:text="@string/title_activity_submit"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blackT12"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_favorite"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_bookmark_white_24dp"
        android:text="@string/title_activity_favorite"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_settings"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_settings_white_24dp"
        android:text="@string/action_settings"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_feedback"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_feedback_white_24dp"
        android:text="@string/feedback"/>

    <com.enamakel.thebigindiannews.views.TintableTextView
        android:id="@id/drawer_about"
        style="@style/DrawerTextStyle"
        android:drawableLeft="@drawable/ic_info_white_24dp"
        android:text="@string/title_activity_about"/>

</LinearLayout>
