<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Ha Duy Trung
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppToolbarTheme"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:background="?attr/colorCardBackground"
        android:clipToPadding="false"
        android:elevation="@dimen/cardview_default_elevation"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideInset"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:id="@id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute">

            <com.enamakel.thebigindiannews.views.TintableTextView
                android:id="@+id/toggle"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:background="?attr/selectableItemBackground"
                android:drawableRight="@drawable/ic_expand_more_white_24dp"
                android:gravity="center_vertical"
                android:hint="@string/original_content"/>

            <TextView
                android:id="@id/text"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:textIsSelectable="true"
                android:visibility="gone"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                tools:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/blackT12"/>

            <TextView
                android:id="@+id/guidelines"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:gravity="center_vertical"
                android:text="@string/formatting_guidelines"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edittext_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/comment_hint"
                android:paddingBottom="@dimen/padding"
                android:paddingTop="@dimen/padding"
                android:singleLine="false"/>

            <View
                android:id="@id/empty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
